<resources>
    <string name="app_name">学富网Demo</string>
    <string name="main_home">首页</string>
    <string name="main_course_table">课表</string>
    <string name="main_found">发现</string>
    <string name="main_my">我的</string>

    <string name="my_NickName">请登录</string>
    <string name="my_Recommend">请简单的介绍自己吧，让老师更好的了解您！</string>
    <string name="my_Dingdan">我的订单</string>
    <string name="wallet_yer">账户余额</string>
    <string name="wallet_hb">红包余额</string>
    <string name="yuer">1%$d 元</string>
    <string name="location_map">百度地图定位</string>

    <string name="tixian">可转出：1%$d 元</string>
    <string name="xz">1:请保持银行卡真实姓名跟用户真实姓名一致</string>
    <string name="xz2">2:提现申请成功后，我们将尽快审核并提现到您的账号，预计5-7个工作日到账</string>
    <string name="xz3">3:如果您提交的账号有误，提现金额将转回我的钱包</string>

    <string name="bbh">版本号：1%$d</string>
    <string name="about_app_name" >学富网学生客户端</string>
    <string name="xuefuwang_about">深圳启程智远网络科技有限公司，以学富网为切入点，致力于打造基于教育产业、内容产业和智能终端的“服务+平台+内容+应用”完整生态系统。通过学富网O2O学习服务平台垂直模式，由人和人连接延伸到人机连接互联网+教育的创新思维，实现去中心化、共享资源的教育未来趋势目标。学富网（xuef.com）结合传统教育模式的短板和痛点，通过O2O垂直教育电商平台扁平化的运营模式颠覆传统教育。优秀教师注册加入学富网平台后，由专业化团队免费帮助老师做形象、实力展示，市场运营，宣传推广，招生、客服等工作，让老师回归本质，从此专注教学服务工作。学生用户通过学富网线上平台强大的名师教育资源，根据需求找到好老师，线下提供优质教育服务。学富网以教育需求为根本根据线下办学经验，结合行业特点、老师学生的需求订制的专业化平台。学富网以先进技术做支撑。
加大教学模式科研技术投入，引进高端人才，实现教育信息化、科技化。学富网以诚信服务为核心。价格指导体系；师资筛选与学习成长体系、淘汰体系；用户评价体系等保证服务质量。学富网的使命。改变人们的学习方式，为教育插上科技的翅膀，人人享有公平的教育资源。学富网的愿景。持续创新、不断颠覆，打造极致体验的“服务+平台+内容+应用”垂直整合的完整生态系统！</string>
    <!-- 首页-->
    <string name="graduateSchool">毕业院校：%1$s</string>
</resources>
