<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/home_radio_group"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/home_home"
            android:drawableTop="@drawable/selector_home_home"
            android:gravity="center"
            android:text="@string/main_home"
            android:textColor="@color/selector_home_text_color"
            android:layout_width="0dp"
            android:button="@null"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/home_course_table"
            android:drawableTop="@drawable/selector_home_course_table"
            android:gravity="center"
            android:text="@string/main_course_table"
            android:textColor="@color/selector_home_text_color"
            android:layout_width="0dp"
            android:button="@null"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/home_found"
            android:drawableTop="@drawable/selector_home_found"
            android:gravity="center"
            android:text="@string/main_found"
            android:textColor="@color/selector_home_text_color"
            android:layout_width="0dp"
            android:button="@null"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/home_my"
            android:drawableTop="@drawable/selector_home_my"
            android:gravity="center"
            android:text="@string/main_my"
            android:textColor="@color/selector_home_text_color"
            android:layout_width="0dp"
            android:button="@null"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </RadioGroup>

    <FrameLayout
        android:id="@+id/home_content"
        android:layout_above="@id/home_radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
