<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_type_bg_color">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/wallet_tv1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:drawablePadding="-40dp"
                android:drawableLeft="@drawable/xuefubi"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/wallet_yer"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/yuer"/>

        </LinearLayout>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/game_type_bg_color"/>
        <LinearLayout
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:drawableLeft="@drawable/briberymoney"
                android:drawablePadding="-40dp"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/wallet_hb"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/yuer"/>

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/wallet_tv_recharge"
        android:layout_marginTop="20dp"
        android:background="@color/white"
       android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:drawableRight="@drawable/next_green"
        android:text="充值"/>
    <TextView
        android:id="@+id/wallet_tv_Withdraw"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:drawableRight="@drawable/next_green"
        android:text="提现"/>
    <TextView
        android:id="@+id/wallet_tv_bankcard"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:drawableRight="@drawable/next_green"
        android:text="银行卡"/>
    <TextView
        android:id="@+id/wallet_tv_bill"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:drawableRight="@drawable/next_green"
        android:text="交易明细"/>

</LinearLayout>