<?xml version="1.0" encoding="utf-8"?>
<com.xuefuwang.webofstudy.my.utils.WaveView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_type_bg_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/message"/>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/switch_face_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="30dp"
        android:background="@color/colorAccent">

       <!-- <com.xuefuwang.webofstudy.other.utils.RoundImageView

            android:id="@+id/my_round_iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/icon_personal_header"
            />-->
        <com.xuefuwang.webofstudy.home.utils.CircleImageViewTwo
            android:id="@+id/my_round_iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/icon_personal_header"/>


        <TextView
            android:id="@+id/my_nickname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/my_round_iv"
            android:layout_toRightOf="@+id/my_round_iv"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:textSize="20sp"
            android:text="@string/my_NickName"
            />
        <TextView
            android:id="@+id/my_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_nickname_tv"
            android:layout_alignLeft="@+id/my_nickname_tv"
            android:paddingLeft="10dp"
            android:text="@string/my_Recommend"/>
    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/my_tv_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/icon_user_order"
            android:layout_marginRight="1dp"
            android:text="@string/my_Dingdan"
            style="@style/text_colors"/>
        <TextView
            android:id="@+id/my_tv_wallet"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/icon_user_wallet"
            android:text="我的钱包"
            android:layout_marginRight="1dp"
            style="@style/text_colors"/>
        <TextView
            android:id="@+id/my_tv_teacher"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/icon_user_teacher"
            android:text="我的老师"
            style="@style/text_colors"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:paddingTop="1dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/my_tv_collect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/text_colors"
            android:layout_marginRight="1dp"
            android:drawableTop="@drawable/icon_user_collect"
            android:text="我的收藏"/>
        <RelativeLayout

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginRight="1dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/my_tv_recommend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                style="@style/text_colors"
                android:layout_marginRight="1dp"
                android:drawablePadding="-5dp"
                android:drawableTop="@drawable/icon_user_recommend"
                android:text="推荐有奖"/>
            <ImageView
                android:layout_alignRight="@+id/my_tv_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_user_recommend_hot"/>
    </RelativeLayout>
        <TextView
            android:id="@+id/my_tv_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/text_colors"
            android:drawableTop="@drawable/icon_user_setting"
            android:text="账户设置"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:paddingTop="1dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/my_tv_about"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/text_colors"
            android:layout_marginRight="1dp"
            android:drawableTop="@drawable/icon_user_about"
            android:text="关于学富"/>
        <TextView
            android:id="@+id/my_tv_feedback"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/text_colors"
            android:layout_marginRight="1dp"
            android:drawableTop="@drawable/icon_user_feedback"
            android:text="意见反馈"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/text_colors" />

    </LinearLayout>

</com.xuefuwang.webofstudy.my.utils.WaveView>